--- a/wear/src/main/AndroidManifest.xml
+++ b/wear/src/main/AndroidManifest.xml
@@ -24,6 +24,18 @@
             android:name="com.google.android.wearable.standalone"
             android:value="true" />
 
+        <service
+            android:name=".WearMessageListenerService"
+            android:enabled="true"
+            android:exported="true">
+            <intent-filter>
+                <!--<action android:name="com.google.android.gms.wearable.MESSAGE_RECEIVED" />-->
+                <!--<data android:scheme="wear" android:host="*" android:pathPrefix="/MainActivity"/>-->
+                <action android:name="com.google.android.gms.wearable.BIND_LISTENER" />
+
+            </intent-filter>
+        </service>
+
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name">
@@ -33,6 +45,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".MicroEngageActivity"/>
+        <activity android:name=".PromptActivity"/>
+
     </application>
 
 </manifest>
