--- a/wear/src/main/AndroidManifest.xml
+++ b/wear/src/main/AndroidManifest.xml
@@ -29,10 +29,10 @@
             android:enabled="true"
             android:exported="true">
             <intent-filter>
-                <!--<action android:name="com.google.android.gms.wearable.MESSAGE_RECEIVED" />-->
-                <!--<data android:scheme="wear" android:host="*" android:pathPrefix="/MainActivity"/>-->
-                <action android:name="com.google.android.gms.wearable.BIND_LISTENER" />
 
+                <!-- <action android:name="com.google.android.gms.wearable.MESSAGE_RECEIVED" /> -->
+                <!-- <data android:scheme="wear" android:host="*" android:pathPrefix="/MainActivity"/> -->
+                <action android:name="com.google.android.gms.wearable.BIND_LISTENER" />
             </intent-filter>
         </service>
 
@@ -45,10 +45,20 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".MicroEngageActivity" />
+        <activity android:name=".PromptActivity" />
+        <activity
+            android:name=".GestureEMAActivity"
+            android:label="@string/title_activity_gesture_ema">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-        <activity android:name=".MicroEngageActivity"/>
-        <activity android:name=".PromptActivity"/>
-
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".TestActivity"
+            android:label="@string/title_activity_test"></activity>
     </application>
 
 </manifest>
